instructions into sidebar
now that sidebars reappear

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,15 +1,43 @@
 <aside>
 	<div class="panel radius">
-		<h3>Interesting fact</h3>
+		<h4>Video tips</h4>
 		<p>
-			Distance sampling can be used in the air, on land, in freshwater, on top of the sea, under the sea.
+			Recall you may view the videos as often as you wish.  To get the most from them, try these tips
 		</p>
+		<ul>
+			<li>Use <i>pause</i> to momentarily stop the video
+			<li>Rewind to repeat passages
+			<li>Turn on captions with <i>CC</i> in lower right
+			<li>Change settings to slow down or speed up video
+		</ul>
 	</div>
 
+	<div class="panel radius">
+		<h4>Other tips</h4>
+		<p>
+			Recall you may view the videos as often as you wish.  To get the most from them, try these tips
+		</p>
+		<ul>
+			<li>If you wish to make notes on the lecture PDF, 
+				<ul>
+				  <li>open the PDF in a separate browser window
+					<li>annotate the PDF while watching the video
+				</ul>	
+			<li>Before performing a computer exercise
+				<ul>
+				  <li>read the exercise instruction PDF
+					<li>listen to the exercise description
+					<li>have the exercise instruction PDF open while conducting analyses with Distance
+				</ul>			
+		</ul>
+	</div>
+
+<!--	
  	<div class="border-dotted radius b30">
 		<img src="http://placekitten.com/271/270" alt="uh, Placekitten">
 		<p class="text-left">
 			However, to our knowledge, it has seldom been applied in the study of domestic kittens.</a>
 		</p>
 	</div>
+-->
 </aside>
