sidebars on all chapters
commented properly

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -12,10 +12,10 @@
 		</ul>
 	</div>
 
-	<div class="panel radius">
+	<div class="radius">
 		<h4>Other tips</h4>
 		<p>
-			Recall you may view the videos as often as you wish.  To get the most from them, try these tips
+			Working with lectures and exercises
 		</p>
 		<ul>
 			<li>If you wish to make notes on the lecture PDF, 
