revisit comments and sidebar border

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -12,7 +12,7 @@
 		</ul>
 	</div>
 
-	<div class="radius">
+	<div class="border-groove radius">
 		<h4>Other tips</h4>
 		<p>
 			Working with lectures and exercises
