--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -9,6 +9,9 @@ format: frontpage
     </div><!-- /.row -->
 </div><!-- /#header-home -->
 
+<p>Distance sampling is a survey method used to estimate the size and density of wildlife
+populations.  This free course provides an introduction to distance sampling concepts, survey
+design, field methods and data analysis.</p>
 
 {% comment %}
 *
