frontpage as table

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -9,9 +9,10 @@ format: frontpage
     </div><!-- /.row -->
 </div><!-- /#header-home -->
 
-<p>Distance sampling is a survey method used to estimate the size and density of wildlife
+<table stype="width:40%">
+<tr><td>Distance sampling is a survey method used to estimate the size and density of wildlife
 populations.  This free course provides an introduction to distance sampling concepts, survey
-design, field methods and data analysis.</p>
+design, field methods and data analysis.</td></tr>
 
 {% comment %}
 *
