frontpage table fix

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -9,10 +9,11 @@ format: frontpage
     </div><!-- /.row -->
 </div><!-- /#header-home -->
 
-<table stype="width:40%">
+<table style="width:40%">
 <tr><td>Distance sampling is a survey method used to estimate the size and density of wildlife
 populations.  This free course provides an introduction to distance sampling concepts, survey
 design, field methods and data analysis.</td></tr>
+</table>
 
 {% comment %}
 *
