News heading frontpage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -66,6 +66,12 @@ design, field methods and data analysis.</td></tr>
 *
 {% endcomment %}
 
+{% comment %}
+Cheesy attempt to get News title onto frontpage
+{% endcomment %}
+
+<h2>News about the course</h2>
+
 {% unless site.posts == empty %}
     <div class="row t30 b20 homepage">
         <div class="small-12 columns">
